--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    add_compile_options(-Wall -Wextra -Wpedantic)
+    add_compile_options(-Wall -Wextra -Wpedantic -O3)
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     add_compile_options(/W4)
 endif()
 
-file(GLOB_RECURSE SOURCES src/*.c src/*.cpp tests/*.c tests/*.cpp)
+file(GLOB_RECURSE SOURCES src/*.c src/*.cpp tests/*.c tests/*.cpp tests/src/*.c tests/src/*.cpp)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
